# nodc-worms

./: README.md  nodc_worms_cli.py  pyproject.toml
src/nodc_worms/: __init__.py  taxa_worms.py  translate_worms.py
src/nodc_worms/CONFIG_FILES/: translate_to_worms.txt
