[project]
name = "nodc-worms"
version = "0.1.0"
description = "\"Lookup AphiaID for species\""
authors = [
    {name = "Magnus Wenzer", email = "magnus.wenzer@smhi.se"},
]
dependencies = [
    "polars>=0.20.15",
    "typer>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=4.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]
